# pybrain

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RESUMO_MODIFICACOES_2026-04-13.md  SECURITY.md  VALIDATION_PLAN.md  alembic.ini  analyze_case_00002.py  auto_run.py  debug_visual_inspection.py  environment.yml  fusion_model.pt  mcp_mimo_v2_pro_setup.md  monitor_memory.py  patch_nnunet_roi.sh  patch_script.py  portable_setup.sh  prepare_brats_case.py  pyproject.toml  pyrightconfig.json  radiomics_features.json  requirements.txt  run_log_20260325_2359.txt  run_pipeline.py  setup_mock_data.py  setup_project.sh  train_manifest.csv
.agents/: agents.md
.agents/skills/: data-loading.md  ensemble-fusion.md  model-inference.md  postprocess.md
.github/workflows/: ci.yml
alembic/: env.py
config/: config.py  defaults.yaml  hardware_profiles.yaml
docker/: docker-compose.yml
docs/: API.md  AUDIT_REPORT.md  AUDIT_REPORT_M4_PRO.md  CALIBRATION_DEPLOYMENT_GUIDE.md  DATA.md  DEPLOYMENT.md  FINAL_VALIDATION_REPORT.md  MC_DROPOUT_IMPLEMENTATION_REPORT.md  MC_DROPOUT_VALIDATION_REPORT.md  MULTI_CASE_VALIDATION_SOP.md  PORTABILITY_GUIDE.md  RESUMO_IMPLEMENTACAO_MULTI_CASE.md  VALIDATION_PLAN.md  final_benchmark_report.md  platt_validation_report.md  statistical_threshold_optimization.md  threshold_optimization_report.md
models/: gwo_optimal_features.json  xgb_classifier.json  xgb_feature_names.json  xgb_feature_order.json  xgb_training_report.txt
pybrain/: __init__.py  config.yaml  pipeline.py
scripts/: 0_clinical_validator.py  0_download_sample.py  0_preflight_check.py  10_enhanced_visualisation.py  10_longitudinal_analysis.py  11_mricrogl_visualisation.py  11_pacs_listener.py  11b_mricrogl_interactive.py  12_brats_figure1.py  12_train_mets_segmenter.py  1_dicom_to_nifti.py  1b_brats_preproc.py  2_ct_integration.py  3_brain_tumor_analysis.py  3b_dual_head_feature_extract.py  3b_mets_analysis.py  4_export_dicom_seg.py  4b_export_rtstruct.py  5_validate_segmentation.py  6_finetune_swinunetr.py  6_tumour_location.py  7_train_nnunet.py  7_tumour_morphology.py  8_radiomics_analysis.py  8b_brainiac_prediction.py  9_generate_report.py  9_generate_report_pt.py  auto_labels_from_volumes.py  benchmark_swin.py  check_model.py  compute_platt_calibration.py  fetch_brats_sample.py  plot_validation_summary.py  predict_grade.py  rescue_option_b.py  rescue_quick.py  rescue_segmentation.py  retrain_xgboost_on_brats.py  run_multi_case_validation.py  session_loader.py  (+13 more)
tests/: audit_pipeline.py  conftest.py  regression_baseline.json  regression_baseline.py  test_audit_regressions.py  test_input_validator.py  test_mets.py  test_normalization.py  test_output_checker.py  test_pipeline_integration.py  verify_windsurf_changes.py
(+101 files in other folders)
